# AM.Sales-VPN

./: CMakeLists.txt  latest.json
installer/: AmSalesVPN.iss
qml/: Main.qml
src/: CfController.cpp  UpdateChecker.cpp  UpdateChecker.h  VlessController.cpp  VlessController.h  ZapretController.cpp  main.cpp
